put charts in container, made navbar correct size on mobile

--- a/app/static/src/css/style.css
+++ b/app/static/src/css/style.css
@@ -4,12 +4,12 @@ body {
 }
 
 .charts {
-    margin-top: 30px;
+    margin-top: 100px;
 }
 
-.charts:last-child {
+/* .charts:last-child {
     margin-bottom: 100px;
-}
+} */
 
 .chart-header {
     text-align: center;
